log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-log
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-reader
          image: blackthest/log-reader:1.4
          volumeMounts: # Mount volume to container
            - name: shared-log
              mountPath: /shared
            - name: config-volume
              mountPath: /config
        - name: log-writer
          image: blackthest/log-writer:1.1
          volumeMounts: # Mount volume to container
            - name: shared-log
              mountPath: /shared
